apps/base/swpt-accounts/shard-template/chores-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chores-consumer
  labels:
    app.kubernetes.io/component: chores-consumer
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: chores-consumer
  template:
    metadata:
      labels:
        app.kubernetes.io/component: chores-consumer
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/component: chores-consumer
            topologyKey: kubernetes.io/hostname
            matchLabelKeys:
            - pod-template-hash
      priorityClassName: shard-background-worker
      containers:
        - name: chores-consumer
          image: swpt-accounts
          args: ['consume_chore_messages']
