apps/base/swpt-accounts/shard-template/http-cache.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: http-cache
  labels:
    app.kubernetes.io/component: http-cache
spec:
  podManagementPolicy: Parallel
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: http-cache
  template:
    metadata:
      labels:
        app.kubernetes.io/component: http-cache
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/component: http-cache
            topologyKey: kubernetes.io/hostname
      priorityClassName: webapi-shard
      containers:
        - name: http-cache
          image: nginx
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
          volumeMounts:
            - name: data
              mountPath: /var/lib/nginx/data
            - name: nginx-config
              mountPath: "/etc/nginx/nginx.conf"
              subPath: nginx.conf
            - name: nginx-config
              mountPath: "/etc/nginx/templates/default.conf.template"
              subPath: default.conf.template
      volumes:
        - name: nginx-config
          configMap:
            name: http-cache-nginx-config
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
    whenScaled: Delete

---
apiVersion: v1
kind: Service
metadata:
  name: http-cache
  labels:
    app.kubernetes.io/component: http-cache
spec:
  selector:
    app.kubernetes.io/component: http-cache
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
